deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aneissh91-echo-app
  namespace: aneissh91-eks-activity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-app
  template:
    metadata:
      labels:
        app: echo-app
    spec:
      containers:
        - name: echo-container
          image: hashicorp/http-echo
          args:
            - "-text=Hello, Aneesh!"
          ports:
            - containerPort: 5678
